# pokemon-api

./: .envrc  .gitignore  .pscale.yml  Cargo.toml  netlify.toml
crates/pokemon-api/: Cargo.toml  build.rs
crates/pokemon-api/src/: main.rs
crates/upload-pokemon-data/: Cargo.toml  create-tables.sql
crates/upload-pokemon-data/src/: db.rs  main.rs  pokemon_csv.rs
