[package]
name = "pokemon-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws_lambda_events = "0.5.0"
http = "0.2.7"
lambda_runtime = "0.4.1"
once_cell = "1.11.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
#sqlx = { version = "0.5.7", features = ["mysql", "runtime-tokio-rustls"] }
sqlx = { git = "https://github.com/scottwey/sqlx.git", branch = "add-utf8mb4-0900-ai-ci-collation-to-mysql-string-types", features = ["mysql", "runtime-tokio-rustls"] }
tokio = "1.14.0"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
