[package]
name = "upload-pokemon-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "0.11.4"
color-eyre = "0.6.1"
csv = "1.1.6"
futures = "0.3.21"
indicatif = "0.16.2"
ksuid = "0.2.0"
serde = { version = "1.0.137", features = ["derive"] }
#sqlx = { version = "0.5.13", features = ["mysql", "runtime-tokio-rustls"] }
sqlx = { git = "https://github.com/scottwey/sqlx.git", branch = "add-utf8mb4-0900-ai-ci-collation-to-mysql-string-types", features = ["mysql", "runtime-tokio-rustls"] }
tokio = { version = "1.18.2", features = ["macros"] }
